--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
 	</listener>
 
 	<welcome-file-list>
-		<welcome-file>WEB-INF/views/hello.jsp</welcome-file>
+		<!-- <welcome-file>WEB-INF/views/hello.jsp</welcome-file> -->
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
