--- a/office/pom.xml
+++ b/office/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<org.springframework-version>4.3.6.RELEASE</org.springframework-version>
+		<spring-security.version>4.2.2.RELEASE</spring-security.version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<logback.version>1.1.3</logback.version>
 	</properties>
@@ -23,7 +24,6 @@
 		</dependency>
 
 		<!-- Spring -->
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -66,6 +66,24 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${spring-security.version}</version>
+		</dependency>
+		
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -85,7 +103,7 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>1.7.21</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>janino</groupId>
 			<artifactId>janino</artifactId>
