--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,24 @@
 	version="3.0">
 	<display-name>office</display-name>
 
-	<!-- -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+				/WEB-INF/spring/root-context.xml
+				,/WEB-INF/spring/spring-security.xml
+		</param-value>
 	</context-param>
-	<!-- ,/WEB-INF/spring/spring-security.xml -->
+
+	<!-- spring securit start -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -33,7 +45,7 @@
 	<!-- Log4j -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:/log4j.xml</param-value>
+		<param-value>classpath:/logback.xml</param-value>
 	</context-param>
 
 
