--- a/office/src/main/resources/mysql.properties
+++ b/office/src/main/resources/mysql.properties
@@ -1,5 +1,6 @@
 # JDBC Configuration  
-jdbcDriverClassName=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-jdbcUsername=root
-jdbcPassword=123456
+
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/office?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=root
+jdbc.password=123456
