--- a/office/src/main/resources/mysql.properties
+++ b/office/src/main/resources/mysql.properties
@@ -1,6 +1,6 @@
 # JDBC Configuration  
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/office?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://localhost:3306/office
 jdbc.username=root
 jdbc.password=123456
