--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -6,20 +6,14 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>
-				/WEB-INF/spring/root-context.xml,/WEB-INF/spring/spring-security.xml
-		</param-value>
+		<param-value>/WEB-INF/spring/root-context.xml,/WEB-INF/spring/spring-security.xml</param-value>
 	</context-param>
 
-	<!-- spring securit start -->
-	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	<!-- -->
+	<!-- Bootstraps the root web application context before servlet initialization -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
@@ -28,7 +22,7 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/dispatcher-servlet.xml</param-value>
 		</init-param>
-		<load-on-startup>1</load-on-startup>
+		<!-- <load-on-startup>1</load-on-startup> -->
 	</servlet>
 
 	<servlet-mapping>
@@ -36,17 +30,22 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<!-- Bootstraps the root web application context before servlet initialization -->
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	<!-- spring securit start -->
+	<filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 
 	<!-- Log4j -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath:/logback.xml</param-value>
 	</context-param>
-
 
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
