--- a/office/pom.xml
+++ b/office/pom.xml
@@ -109,6 +109,13 @@
 			<artifactId>janino</artifactId>
 			<version>2.5.10</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-dbcp</groupId>
