--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml,/WEB-INF/spring/spring-security.xml</param-value>
+		<param-value>classpath:/spring/root-context.xml,classpath:/spring/spring-security.xml</param-value>
 	</context-param>
 
 	<servlet>
@@ -14,7 +14,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/dispatcher-servlet.xml</param-value>
+			<param-value>classpath:/spring/dispatcher-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
