--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,11 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+	
+	<listener>
+		<listener-class>com.glad.startup.AppContextListener</listener-class>
+	</listener>
+	
 	<!-- Log4j -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
