--- a/office/src/main/java/com/glad/ErrorResources.properties
+++ b/office/src/main/java/com/glad/ErrorResources.properties
@@ -1,5 +1,5 @@
-E00001	=	This is a Error Message !QAQ!
-OFE0001MW	=	
-OFE0001ME	=	
-OFE0001LW	=
-OFE0001LE	=
+OFE0001MW	=	{0} This is a Error Message !QAQ! {1}
+OFE0002MW	=	
+OFE0003ME	=	
+OFE0004LW	=
+OFE0005LE	=
