--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -86,6 +86,13 @@
 			<version>1.7.21</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.1.0.Final</version>
+		</dependency>
+		
 		<!-- Junit -->
 		<dependency>
 			<groupId>junit</groupId>
