--- a/office/src/main/java/com/glad/ErrorResources.properties
+++ b/office/src/main/java/com/glad/ErrorResources.properties
@@ -4,3 +4,27 @@ OFE0003ME	=
 OFE0004LW	=
 OFE0005LE	=
 testcode	=	errorMsg
+
+AssertFalse = \u53EA\u80FD\u4E3Afalse
+AssertTrue  = \u53EA\u80FD\u4E3Atrue
+DecimalMax  = \u5FC5\u987B\u5C0F\u4E8E\u6216\u7B49\u4E8E{value}
+DecimalMin  = \u5FC5\u987B\u5927\u4E8E\u6216\u7B49\u4E8E{value}
+Digits      = \u6570\u5B57\u7684\u503C\u8D85\u51FA\u4E86\u5141\u8BB8\u8303\u56F4(\u53EA\u5141\u8BB8\u5728{integer}\u4F4D\u6574\u6570\u548C{fraction}\u4F4D\u5C0F\u6570\u8303\u56F4\u5185)
+Future      = \u9700\u8981\u662F\u4E00\u4E2A\u5C06\u6765\u7684\u65F6\u95F4
+Max         = \u6700\u5927\u4E0D\u80FD\u8D85\u8FC7{value}
+Min         = \u6700\u5C0F\u4E0D\u80FD\u5C0F\u4E8E{value}
+NotNull     = \u4E0D\u80FD\u4E3Anull
+Null        = \u5FC5\u987B\u4E3Anull
+Past        = \u9700\u8981\u662f\u4e00\u4e2a\u8fc7\u53bb\u7684\u65F6\u95F4
+Pattern     = \u9700\u8981\u5339\u914D\u6B63\u5219\u8868\u8FBE\u5F0F"{regexp}"
+Size        = \u4E2A\u6570\u5FC5\u987B\u5728{min}\u548C{max}\u4E4B\u95F4
+
+CreditCardNumber = \u4E0D\u5408\u6CD5\u7684\u4FE1\u7528\u5361\u53F7\u7801
+Email            = \u4E0D\u662F\u4E00\u4E2A\u5408\u6CD5\u7684\u7535\u5B50\u90AE\u4EF6\u5730\u5740
+Length           = \u957F\u5EA6\u9700\u8981\u5728{min}\u548C{max}\u4E4B\u95F4
+NotBlank         = \u4E0D\u80FD\u4E3A\u7A7A
+NotEmpty         = \u4E0D\u80FD\u4E3A\u7A7A
+Range            = \u9700\u8981\u5728{min}\u548C{max}\u4E4B\u95F4
+SafeHtml         = \u53EF\u80FD\u6709\u4E0D\u5B89\u5168\u7684HTML\u5185\u5BB9
+ScriptAssert     = \u6267\u884C\u811A\u672C\u8868\u8FBE\u5F0F"{script}"\u6CA1\u6709\u80FD\u591F\u5F97\u5230true
+URL              = \u9700\u8981\u662F\u4E00\u4E2A\u5408\u6CD5\u7684URL
