--- a/Tools/pom.xml
+++ b/Tools/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>Tools</name>
-	
+
 	<properties>
 		<repository.base>C:\Dev\.m2\repository</repository.base>
 	</properties>
@@ -35,6 +35,19 @@
 			<version>5.1.30</version>
 		</dependency>
 
+		<!--代码生成器依赖 -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper</artifactId>
+			<version>3.4.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
