--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,24 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+	<!-- 配置请求过滤器，编码格式设为UTF-8，避免中日文乱码 -->  
+	<filter>
+		<filter-name>characterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>characterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 	<!-- spring securit start -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
@@ -42,7 +60,7 @@
 	<listener>
 		<listener-class>com.glad.startup.AppContextListener</listener-class>
 	</listener>
-
+	
 	<!-- Log4j -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
