--- a/office/src/main/webapp/WEB-INF/web.xml
+++ b/office/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<!-- 配置请求过滤器，编码格式设为UTF-8，避免中日文乱码 -->  
+	<!-- 配置请求过滤器，编码格式设为UTF-8，避免中日文乱码 -->
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -60,7 +60,7 @@
 	<listener>
 		<listener-class>com.glad.startup.AppContextListener</listener-class>
 	</listener>
-	
+
 	<!-- Log4j -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
@@ -84,4 +84,12 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/system/404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/WEB-INF/views/system/500.jsp</location>
+	</error-page>
 </web-app>
