--- a/office/src/main/java/com/glad/ErrorResources.properties
+++ b/office/src/main/java/com/glad/ErrorResources.properties
@@ -1,4 +1,4 @@
-OFE0001MW	=	{0} This is a Error Message !QAQ! {1}
+OFE0001MW	=	{0} This is a Error Message  {1}
 OFE0002MW	=	
 OFE0003ME	=	
 OFE0004LW	=
