--- a/Tools/pom.xml
+++ b/Tools/pom.xml
@@ -35,17 +35,17 @@
 		</dependency>
 
 		<!--代码生成器依赖 -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.freemarker</groupId> -->
-		<!-- <artifactId>freemarker</artifactId> -->
-		<!-- <version>2.3.23</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+		</dependency>
 
-		<!-- <dependency > -->
-		<!-- <groupId>tk.mybatis</groupId> -->
-		<!-- <artifactId>mapper</artifactId> -->
-		<!-- <version>3.4.0</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper</artifactId>
+			<version>3.4.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
